# Old-Bad-Compiler

./: README.md
tak/: CMakeLists.txt
tak/include/: argparse.hpp  ast_types.hpp  checker.hpp  codegen.hpp  config.hpp  defer.hpp  do_compile.hpp  entity_table.hpp  io.hpp  lexer.hpp  panic.hpp  parser.hpp  postparser.hpp  semantic_error_handler.hpp  support.hpp  sym_types.hpp  token.hpp  typedata.hpp  util.hpp  utils.hpp  var_types.hpp
tak/src/: main.cpp
tak/src/checker/: convert.cpp  evaluate.cpp  get.cpp  report_error.cpp  typecheck.cpp  typedata.cpp  verify.cpp  visit.cpp
tak/src/codegen/: begin.cpp  codegen.cpp  constants.cpp  context.cpp  controlflow.cpp  declarations.cpp  defer.cpp  expressions.cpp  init.cpp  llvm_types.cpp  util.cpp  wrapped.cpp
tak/src/entity_table/: dump_entities.cpp  namespaces.cpp  scope.cpp  symbols.cpp  types.cpp
tak/src/lexer/: ambiguous_token.cpp  basic.cpp  errors.cpp  init.cpp  iterate.cpp  lex.cpp  lexer_ambiguous_token.cpp  lexer_lex.cpp  lexer_report_error.cpp  lexer_tokens.cpp  lexer_util.cpp  report_error.cpp  tokens.cpp  util.cpp
tak/src/parser/: begin.cpp  compose.cpp  controlflow.cpp  ctrlflow.cpp  decl.cpp  declarations.cpp  directive.cpp  dump.cpp  dump_nodes.cpp  enumdef.cpp  expr.cpp  expressions.cpp  ident.cpp  misc.cpp  namespace.cpp  namespaces.cpp  parser.cpp  parser_begin.cpp  parser_dump_nodes.cpp  parser_misc.cpp  parser_namespaces.cpp  parser_parse_decls.cpp  parser_parse_expressions.cpp  parser_parse_keywords.cpp  parser_parsedecl.cpp  parser_symtbl.cpp  parser_typetbl.cpp  parser_util.cpp  structdef.cpp  symtbl.cpp  type.cpp  typetbl.cpp  util.cpp
tak/src/postparser/: generic_procedures.cpp  generic_structs.cpp  other.cpp
tak/src/support/: argparse.cpp  basic_utility.cpp  config.cpp  destructors.cpp  do_compile.cpp  io.cpp  semantic_error_handler.cpp  token_util.cpp  typedata_util.cpp  util.cpp
tak/src/utils/: basic_utility.cpp  destructors.cpp
tests/: test1.txt  test1.txtT  test2.txt  test3.txt  test_utf8.txt
